--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
             <div class="main__block">
                 <h1 class="main__title">So begins a new age of knowledge</h1>
                 <p class="main__text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vitae nulla quis turpis cursus pharetra. Fusce blandit nec tortor sit amet ullamcorper.
+                    Welcome to our company website! Here you will find all the latest information about our services. We are engaged in the preparation of business plans for the development of companies
                 </p>
                 <div class="line"></div>
                 <button class="btn" id="btn-one">
@@ -44,7 +44,7 @@
                     <h2 class="title">OUR SERVICES</h2>
                     <div class="line line_black"></div>
                     <p class="services__text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tincidunt sit amet erat malesuada interdum. Aenean sodales dui quis leo fermentum scelerisque. Fusce condimentum dolor justo, ac tristique diam iaculis at.
+                        Our company provides a wide range of services. We are happy to help you implement any of your ideas.
                     </p> 
                 </div>   
                <div class="cards">
@@ -99,7 +99,7 @@
                     <div class="line line_black"></div>
                 </div>
                 <p class="works__text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Aenean tincidunt sit amet at.
+                    This section presents our work.<br> We are proud of them!
                 </p>
             </div>
         </div>
@@ -108,10 +108,10 @@
         <div class="container">
             <div class="project__block">
                 <div class="project__info">
-                    <h2 class="title title_white">Project Title Here</h2>
+                    <h2 class="title title_white">Project Public Forum</h2>
                     <div class="line"></div>
                     <p class="project__text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in leo turpis. Praesent tempus felis diam, in suscipit lectus euismod et. Pellentesque habitant morbi tristique senectus fames ac turpis egestas.
+                        This project is a forum for people to communicate. It also has everything you need to find out the news, see the statistics of the city on various issues.
                     </p>
                     <button class="btn">
                         See it live
@@ -172,7 +172,7 @@
                     <div class="line line_black"></div>
                 </div>
                 <p class="read__text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Phasellus aliquet purus et orci tincidunt tempus. <br>Duis ultricies, nibh
+                    Our team prefers to share their impressions with the world! <br> Here you can read articles on various topics from our minds.
                 </p>
             </div>
             <div class="read__table">
@@ -231,7 +231,7 @@
                     <h2 class="title">Who are we?</h2>
                     <div class="line line_black"></div>
                     <p class="services__text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus aliquet purus et orci tincidunt tempus. Duis ultricies, lorem sit amet hendrerit sodales, orci dolor vulputate metus.
+                        Meet our amazing team. Each team member is involved in a specific area of the company. Together we do the best work for you!
                     </p>    
                 </div> 
                <div class="cards">
@@ -304,10 +304,7 @@
 
     <section class="vimeo">
         <div class="contauner">
-            <h2 class="vimeo__title">Slow Life (Vimeo)</h2>
-            <p class="vimeo__text">
-                Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus, nisi erat porttitor ligula eget.
-            </p>
+            <h2 class="vimeo__title">Beautiful photos for the soul</h2>
             <div class="vimeo__slaider">
                 <div class="vimeo__img">
                     <img src="img/sky.jpg" alt="slide">
