--- a/src/index.html
+++ b/src/index.html
@@ -349,8 +349,7 @@
                 <input name="phone" placeholder="Your phone">
                 <input name="email" type="email" placeholder="Your E-mail">
                 <textarea name="text" class="modal__text" placeholder="Your message..."></textarea>
-                <button class="modal__submit button_submit">Submit &rarr;</button>
-                <!-- Submit &rarr;</input> -->
+                <button type="submit" class="modal__submit button_submit">Submit &rarr;</button>
             </form>
        </div>
 
