--- a/src/index.html
+++ b/src/index.html
@@ -15,14 +15,14 @@
     <section class="main">
         <div class="container">
             <a href="#">
-                <div class="main__header">
+                <header class="main__header">
                     <div class="main__logo">
                         <img src="icon/logo.svg" alt="logo" class="animate__animated animate__pulse animate__infinite">
                     </div>
                     <div class="main__logotext">
                         we work!
                     </div>
-                </div>
+                </header>
             </a>
             <div class="main__block">
                 <h1 class="main__title">So begins a new age of knowledge</h1>
